# cache-RAG-CAG-

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.ps1  stop.ps1
.github/workflows/: ci.yml
design/: Chacal Bot.html  app.jsx  components.jsx  data.jsx  icons.jsx  styles.css
docs/: architecture.html  architecture.mmd
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Composer.tsx  EmptyState.tsx  ErrorBoundary.tsx  Icons.tsx  Messages.tsx  Sidebar.tsx  Thinking.tsx  TopBar.tsx  Tweaks.tsx
frontend/src/hooks/: useTweaks.ts
scripts/: dev.ps1  dev.sh  post_vlm.py  run_api.py  run_phase01.py  streamlit_app.py
src/sapa_rag/: __init__.py  cache.py  cli.py  config.py  extract_structured.py  logging_setup.py  models.py
src/sapa_rag/api/: main.py  schemas.py  store.py
src/sapa_rag/excel/: exporter.py
src/sapa_rag/ingest/: classify.py  codes.py  docling_parser.py  pdf_loader.py  pipeline.py  rasterize.py  sections.py
src/sapa_rag/rag/: chunker.py  index.py  qa.py
src/sapa_rag/vlm/: extractor.py  schemas.py
